# amstel

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/directory/: index.tsx
src/navigation/: index.tsx
src/path/: index.tsx
